<resources>
    <!-- Authentication -->
    <string name="callback_url_scheme" translatable="false">https</string>
    <string name="callback_url_host" translatable="false">monzowidget</string>

    <!-- App strings -->
    <string name="app_name">Monzo Widget</string>

    <!-- Splash -->
    <string name="splash_activity_title">@string/app_name</string>

    <!-- Setup Client -->
    <string name="setup_activity_title">Configure Client</string>
    <string name="setup_welcome_title">Let\'s get setup!</string>
    <string name="setup_welcome_subtitle">Have you already created a confidential Monzo client?</string>
    <string name="setup_welcome_action_positive">Yes, I have!</string>
    <string name="setup_welcome_action_negative">I don\'t think so?</string>
    <string name="setup_info_title">Create a new client app</string>
    <string name="setup_info_subtitle">Log in with the Monzo Developer Portal, create a confidential client, and set the redirect uri to https://monzowidget</string>
    <string name="setup_info_action">Go to Monzo Developer Portal</string>
    <string name="setup_enter_client_details_title">Enter client details</string>
    <string name="setup_enter_client_id_hint">Client id</string>
    <string name="setup_enter_client_secret_hint">Client secret</string>
    <string name="setup_entered_client_details">Done</string>

    <!-- Login -->
    <string name="login_activity_title">Monzo Widget</string>
    <string name="login_unauthed_title">Login with Monzo</string>
    <string name="login_unauthed_subtitle">Tap \'Login\' below to get started, and we\'ll walk you through how to log in with your Monzo account.</string>
    <string name="login_unauthed_action">Login</string>
    <string name="login_redirecting_title">Redirecting to browser in… %1$d</string>
    <string name="login_redirecting_subtitle">Please follow the instructions to send a magic link email, then open the email and click on \'Log in to Monzo\'.</string>
    <string name="login_logging_in_title">Logging you in…</string>
    <string name="login_logging_in_subtitle">This shouldn\'t take too long.</string>
    <string name="login_requires_sca_title">Approve in Monzo app</string>
    <string name="login_requires_sca_subtitle">To finish setup, we need to grant access to your accounts and balance information every 90 days. Please go to your Monzo app to approve this widget.</string>
    <string name="login_requires_sca_action">Open Monzo app</string>
    <string name="login_requires_sca_monzo_not_installed">Monzo app not installed!</string>
    <string name="login_logged_in_title">Successfully logged in</string>
    <string name="login_logged_in_subtitle">You can now create widgets to see your 💳 Account or 🍯 Pot balances. \n\nGo to your phone\'s launcher to add your first widget.</string>
    <string name="login_logged_in_action">Close</string>

    <!-- Home -->
    <string name="home_activity_title">Home</string>
    <string name="home_empty_title">No widgets yet</string>
    <string name="home_empty_subtitle">@string/login_logged_in_subtitle</string>
    <string name="home_title_existing_widgets">Widgets</string>
    <string name="home_title_settings">Settings</string>

    <!-- Settings -->
    <string name="settings_activity_title">Configure Widget</string>
    <string name="settings_title_current_account">Current account</string>
    <string name="settings_header_accounts">Accounts</string>
    <string name="settings_header_pots">Pots</string>
    <string name="settings_title_widget_type">Widget types</string>
    <string name="home_title_refresh_interval">Refresh interval</string>
    <string name="home_subtitle_refresh_interval">Refreshes data with Monzo hourly.</string>
</resources>
