<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.emmav.monzo.widget.feature.setupclient.SetupClientActivity">

    <TextView
        android:id="@+id/setupEmojiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:textSize="100sp"
        app:layout_constraintBottom_toTopOf="@id/setupTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="👋🏿" />

    <TextView
        android:id="@+id/setupTitleTextView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/setupClientIdEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setupEmojiTextView"
        tools:text="title" />

    <TextView
        android:id="@+id/setupSubtitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/setupBottomPadding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setupTitleTextView"
        tools:text="instructions etc" />

    <EditText
        android:id="@+id/setupClientIdEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="username"
        android:hint="@string/setup_enter_client_id_hint"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/setupClientSecretEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setupTitleTextView"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/setupClientSecretEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="password"
        android:hint="@string/setup_enter_client_secret_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/setupBottomPadding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setupClientIdEditText"
        tools:visibility="visible" />

    <Button
        android:id="@+id/existingClientButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/setup_welcome_action_positive"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/createClientButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/createClientButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/setup_welcome_action_negative"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/goToCreateClientButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/setup_info_action"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/setupEnteredClientDetailsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/setup_entered_client_details"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <View
        android:id="@+id/setupBottomPadding"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setupClientSecretEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>
